--- a/MVC/Views/Cart/Index.cshtml
+++ b/MVC/Views/Cart/Index.cshtml
@@ -5,70 +5,120 @@
 }
 
 <h2 class="m-5">Giỏ hàng của bạn</h2>
-<div class="mx-5 cart">
-    <table class="table">
+<div class="mx-5">
+            <div class="cart table-responsive-lg">
+                <table class="table">
 
-        <thead class="bg-info text-white">
-            <tr>
-                <th scope="col"class="first-cell"> </th>
-                <th scope="col" colspan="2">Tên sản phẩm</th>
-                <th scope="col">Giá</th>
-                <th scope="col">Số lượng</th>
-                <th scope="col">Thành tiền</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td scope="row"  class="first-cell">
-                    <div class="row">
-                        <div class="col-auto align-self-center">
-                            <button class="close float-left">
-                                x
-                            </button>
-                        </div>
+                    <thead class="bg-info text-white">
+                        <tr>
 
-                        <div class="col-8 h-100">
-                            <img src="~/Resource/chitiet/1.png" alt="Alternate Text" class="image-on-cart" />
-                        </div>
-                    </div>
-                </td>
-                <td class="name-cell my-auto" colspan="2">Ốp lưng siêu đẹp siêu khủng siêu to khổng lồ</td>
-                <td class="price-cell">3000 <u>đ</u></td>
-                <td class="quantity-cell"><input type="number" name="name" value="1" min="1" /></td>
-                <td class="sub-total-cell">3000 <u>đ</u></td>
-            </tr>
-            <tr>
-                <td colspan="6">
-                    <div class="row">
-                        <div class="col-auto ml-auto pr-4">
-                            <a href="#" class="btn btn-success">Cập nhật giỏ hàng</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="6">
-                    <div class="row text-total">
-                        <div class="col-auto ml-auto pr-4">
-                            Tổng tiền
-                        </div>
-                        <div class="col-auto pr-4">
-                            100000 <u>đ</u>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="6">
-                    <div class="row">
-                        <div class="col-auto ml-auto pr-4">
-                            <a href="#" class="btn btn-primary btn-checkout">Thanh toán <i class="fa fa-arrow-circle-right"></i></a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+                            <th class="first-cell"> </th>
+
+                            <th colspan="2" class="flex-nowrap">Tên sản phẩm</th>
+                            <th>Giá</th>
+                            <th>Số lượng</th>
+                            <th>Thành tiền</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="first-cell">
+                                <div class="row">
+                                    <div class="col-auto align-self-center">
+                                        <button class="close float-left">
+                                            x
+                                        </button>
+                                    </div>
+
+                                    <div class="col-8 h-100">
+                                        <img src="~/Resource/chitiet/1.png" alt="Alternate Text" class="image-on-cart" />
+                                    </div>
+                                </div>
+                            </td>
+                            <td  colspan="2">
+                                <div class="name-cell my-auto">
+                                    Ốp lưng siêu đẹp siêu khủng siêu to khổng lồ
+                                </div>
+                            </td>
+                            <td>
+                                <div class="price-cell">
+                                    3000 <u>đ</u>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="quantity-cell">
+                                    <input type="number" name="name" value="1" min="1" class="w-50" />
+                                </div>
+                            </td>
+                            <td>
+                                <div class="sub-total-cell">
+                                    3000 <u>đ</u>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="6">
+                                <div class="row">
+                                    <div class="col-auto ml-auto pr-4">
+                                        <a href="#" class="btn btn-success">Cập nhật giỏ hàng</a>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="6">
+                                <div class="row text-total">
+                                    <div class="col-auto ml-auto pr-4">
+                                        Tổng tiền
+                                    </div>
+                                    <div class="col-auto pr-4">
+                                        100000 <u>đ</u>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="6">
+                                <div class="row">
+                                    <div class="col-auto ml-auto pr-4">
+                                        <a href="#checkOut"data-toggle="collapse" role="button" aria-expanded="false" aria-controls="checkOut" class="btn btn-primary btn-checkout">Đi đến đặt hàng <i class="fa fa-arrow-circle-right"></i></a>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr >
+                            <td colspan="6">
+                                <div id="checkOut" class="collapse row">
+                                    <div class="col-12 col-md-8">
+                                        <form action="/" method="post">
+                                            <label>Họ và tên</label>
+                                            <input type="text" placeholder="Nhập họ tên" class="form-control" />
+                                            <label>Số điện thoại</label>
+                                            <input type="text" placeholder="Nhập số điện thoại" class="form-control" />
+                                            <label>Email</label>
+                                            <input type="text" placeholder="Nhập e-mail" class="form-control" />
+                                            <label>Địa chỉ</label>
+                                            <input type="text" placeholder="Nhập địa chỉ" class="form-control" />
+                                            <div class="row pt-4">
+                                                <div class="col-auto ml-auto">
+                                                    <a href="#" class="btn btn-info">Đặt hàng</a>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 </div>
 
 
+@section scripts{
+    <script>
+        $("input[type='number']").inputSpinner();
+    </script>
+
+}
