--- a/MVC/Views/Shared/Register.cshtml
+++ b/MVC/Views/Shared/Register.cshtml
@@ -73,7 +73,7 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputAddressSU">Address</label>
-                @Html.TextBoxFor(model => model.Address, new { @class = "form-control", id = "InputAddressSU", placeholder = "Enter your email" })
+                @Html.TextBoxFor(model => model.Address, new { @class = "form-control", id = "InputAddressSU", placeholder = "Enter your address" })
                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
             </div>
         </div>
