--- a/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -86,7 +86,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
 
-                    @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin")|| User.IsInRole("Employee")))
                     {
                         <li class="nav-item">
                             <div class="dropdown">
