--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@ ViewBag.Active = "#HomeBtn";
             <div class="col-lg-6 order-last order-lg-first">
                 <p class="big-header">Ốp lưng thời trang<br />cho riêng bạn</p>
                 <p class="smaller-header">Trùng lặp phong cách? Không còn là vấn đề</p>
-                <div class="row w-100">
+                <div class="row w-100 m-auto">
                     <div class="col-auto mx-auto mx-lg-0">
                         <a class="btn-pick-your-case text-decoration-none" href="/Product">CHỌN NGAY ỐP LƯNG</a>
                     </div>
