UpdateCart xong, Cart coi như xong

--- a/MVC/Views/Product/Index.cshtml
+++ b/MVC/Views/Product/Index.cshtml
@@ -84,14 +84,12 @@
 
                                         </div>
                                     </div>
-
                                 </div>
-
                             </a>
                             <div class="mask">
                                 <div class="row h-custom-40 align-content-end">
                                     <div class="col-auto mx-auto">
-                                        <a href="#" class="add">Add To Cart</a>
+                                        <a href="#" onclick="AddToCart(@item.ProductID)" class="add">Add To Cart</a>
                                     </div>
                                 </div>
                                 <div class="row h-custom-12 align-content-center">
