--- a/MVC/Views/Cart/Index.cshtml
+++ b/MVC/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MVC.Models.ShoppingCart
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -32,8 +32,16 @@
         </div>
     </div>
 </div>
-<h2 class="m-5">Giỏ hàng của bạn</h2>
-<div class="mx-5">
+@if (Model.Count == 0)
+{
+    <h2 class="m-5"> Không có sản phẩm nào trong giỏ hàng!</h2>
+}
+else
+{
+    <form action="/Cart/UpdateCartQuantity" method="post" id="formCart">
+        <h2 class="m-5">Giỏ hàng của bạn</h2>
+        <div class="mx-5">
+
             <div class="cart table-responsive-lg">
                 <table class="table">
 
@@ -50,46 +58,57 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td class="first-cell">
-                                <div class="row">
-                                    <div class="col-auto align-self-center">
-                                        <button class="close float-left">
-                                            x
-                                        </button>
-                                    </div>
 
-                                    <div class="col-8 h-100">
-                                        <img src="~/Resource/chitiet/1.png" alt="Alternate Text" class="image-on-cart" />
+                        @foreach (var item in Model.Items)
+                        {
+                            <tr>
+                                <td class="first-cell">
+                                    <div class="row">
+                                        <div class="col-auto align-self-center">
+                                            <a href="/Cart/RemoveFromCart/@Model.Items.IndexOf(item)" class="close float-left text-danger">
+                                                x
+                                            </a>
+                                        </div>
+
+                                        <div class="col-8 h-100">
+                                            <img src="/@item.Product.Image" alt="Alternate Text" class="image-on-cart" />
+                                        </div>
                                     </div>
-                                </div>
-                            </td>
-                            <td  colspan="2">
-                                <div class="name-cell my-auto">
-                                    Ốp lưng siêu đẹp siêu khủng siêu to khổng lồ
-                                </div>
-                            </td>
-                            <td>
-                                <div class="price-cell">
-                                    3000 <u>đ</u>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="quantity-cell">
-                                    <input type="number" name="name" value="1" min="1" class="w-50" />
-                                </div>
-                            </td>
-                            <td>
-                                <div class="sub-total-cell">
-                                    3000 <u>đ</u>
-                                </div>
-                            </td>
-                        </tr>
+                                </td>
+                                <td colspan="2">
+                                    <div class="name-cell my-auto">
+                                        @item.Product.Name
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="price-cell">
+                                        @if (item.Product.PromotionPrice != 0)
+                                        {
+                                            @item.Product.PromotionPrice
+                                        }
+                                        else
+                                        {
+                                            @item.Product.Price
+                                        } <u>đ</u>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="quantity-cell">
+                                        @Html.TextBoxFor(x => x.Items[Model.Items.IndexOf(item)].Count, new { type = "number", min="1" })
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="sub-total-cell">
+                                        @item.SubTotal() <u>đ</u>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
                         <tr>
                             <td colspan="6">
                                 <div class="row">
                                     <div class="col-auto ml-auto pr-4">
-                                        <a href="#" class="btn btn-success">Cập nhật giỏ hàng</a>
+                                        <a href="#" onclick="return UpdateCart()" class="btn btn-success">Cập nhật giỏ hàng</a>
                                     </div>
                                 </div>
                             </td>
@@ -101,7 +120,7 @@
                                         Tổng tiền
                                     </div>
                                     <div class="col-auto pr-4">
-                                        100000 <u>đ</u>
+                                        @Model.GrantTotal() <u>đ</u>
                                     </div>
                                 </div>
                             </td>
@@ -110,16 +129,16 @@
                             <td colspan="6">
                                 <div class="row">
                                     <div class="col-auto ml-auto pr-4">
-                                        <a href="#checkOut"data-toggle="collapse" role="button" aria-expanded="false" aria-controls="checkOut" class="btn btn-primary btn-checkout">Đi đến đặt hàng <i class="fa fa-arrow-circle-right"></i></a>
+                                        <a href="#checkOut" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="checkOut" class="btn btn-primary btn-checkout">Đi đến đặt hàng <i class="fa fa-arrow-circle-right"></i></a>
                                     </div>
                                 </div>
                             </td>
                         </tr>
-                        <tr >
+                        <tr>
                             <td colspan="6">
                                 <div id="checkOut" class="collapse row">
                                     <div class="col-12 col-md-8" id="containerInfo">
-                                        @Html.Partial("FormInfo",new MVC.Models.OrderInfomation())
+                                        @Html.Partial("FormInfo", new MVC.Models.OrderInfomation())
                                     </div>
                                 </div>
                             </td>
@@ -127,12 +146,16 @@
                     </tbody>
                 </table>
             </div>
-</div>
+        </div>
 
-
+    </form>
+}
 @section scripts{
     <script>
         $("input[type='number']").inputSpinner();
+        function UpdateCart() {
+            $("#formCart").submit();
+        }
         $(document).ready(function () {
             $("#modalOrderSuccess").on("hidden.bs.modal", function () {
                 window.open("/Home", '_self');
