bắt đầu trang design

--- a/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -97,7 +97,7 @@
 
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
                                     <a class="dropdown-item" href="/Admin/Login/Login">Change account</a>
-                                    <a class="dropdown-item" href="#">Profile <span class="float-right"><i class="far fa-user"></i></span></a>
+                                    <a class="dropdown-item" href="/Profile">Profile <span class="float-right"><i class="far fa-user"></i></span></a>
                                     <a class="dropdown-item" href="/Admin/Login/Logout">Log out <span class="float-right"><i class="fas fa-sign-out-alt"></i></span></a>
                                 </div>
                             </div>
