--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -8,7 +8,36 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://kit.fontawesome.com/d2b907b6c8.js" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" href="Style.css" type="text/css">
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="Design.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Abril Fatface" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Akronim" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Almendra Display" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Aguafina Script" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Annie Use Your Telescope" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Arbutus" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Asset" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Bigelow Rules" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Bonbon" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Condiment" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Caesar Dressing" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Dawning of a New Day" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="just-for-save" id="saveEmptySignUpForm" hidden>
@@ -145,7 +174,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto topbar">
-                    <li class="nav-item" id="HomeBtn"><a class="nav-link" href="/Home/Index">Home</a></li>
+                    <li class="nav-item" id="HomeBtn"><a class="nav-link" href="/Home/Index">Home</a></li> 
                     <li class="nav-item" id="ProductBtn"><a class="nav-link" href="/Product/Index">Product</a></li>
                     <li class="nav-item" id="DesignBtn"> <a class="nav-link" href="/Design/Index">Design</a></li>
                 </ul>
@@ -163,7 +192,7 @@
 
                                 <div class="dropdown-menu dropdown-menu-right offset-2" aria-labelledby="dropdownMenuLink">
                                     <a class="dropdown-item" href="#modalSignIn" data-toggle="modal">Change account</a>
-                                    <a class="dropdown-item" href="#">Profile <span class="float-right"><i class="far fa-user"></i></span></a>
+                                    <a class="dropdown-item" href="/Profile">Profile <span class="float-right"><i class="far fa-user"></i></span></a>
                                     <a class="dropdown-item" href="/Login/Logout">Log out <span class="float-right"><i class="fas fa-sign-out-alt"></i></span></a>
                                 </div>
                             </div>
