--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -8,11 +8,11 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://kit.fontawesome.com/d2b907b6c8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Style.css" type="text/css">
+    <link rel="stylesheet" href="~/Content/Style.css" type="text/css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="Design.js"></script>
+    <script src="~/Scripts/Design.js"></script>
     <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Abril Fatface" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet" type="text/css">
