--- a/MVC/Content/Style.css
+++ b/MVC/Content/Style.css
@@ -137,17 +137,15 @@ a {
     display: inline-block;
     float: left;
     font-size: 11px;
-    margin: 4px;
     min-height: 62px;
 	height: 70px;
-    padding: 4px 0;
+    padding: 5px;
+    margin:7px;
     text-align: center;
-    width: 146px;
+    width: 18%;
 }
 .font-alot{
 	display: inline-block;
-    max-height: 350px;
-    overflow: auto;
 	width: 100%;
 }
 a.box-font:hover,a.box-img:hover {
